src/iiml/iimlParser.py
# Generated from iiml.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class iimlParser ( Parser ):

    grammarFileName = "iiml.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'is'", "'output'", "'image'", "'size'", 
                     "'by'", "'background'", "'place'", "'at'", "'with'", 
                     "'intensity'", "'radius'", "'width'", "'height'", "'for'", 
                     "'within'", "'number'", "'string'", "'percentage'", 
                     "'list'", "'of'", "'circle'", "'rect'", "'cross'", 
                     "'plus'", "'read'", "'('", "')'", "'*'", "'/'", "'+'", 
                     "'-'", "'['", "']'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PERCENTAGE", 
                      "NUMBER", "STRING", "ID", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_variableDeclaration = 2
    RULE_assignment = 3
    RULE_outputStatement = 4
    RULE_imageStatement = 5
    RULE_placeStatement = 6
    RULE_shapeSize = 7
    RULE_forStatement = 8
    RULE_forControl = 9
    RULE_forType = 10
    RULE_shape = 11
    RULE_expression = 12
    RULE_primary = 13
    RULE_list = 14
    RULE_type = 15

    ruleNames =  [ "program", "statement", "variableDeclaration", "assignment", 
                   "outputStatement", "imageStatement", "placeStatement", 
                   "shapeSize", "forStatement", "forControl", "forType", 
                   "shape", "expression", "primary", "list", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    PERCENTAGE=35
    NUMBER=36
    STRING=37
    ID=38
    COMMENT=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(iimlParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iimlParser.StatementContext)
            else:
                return self.getTypedRuleContext(iimlParser.StatementContext,i)


        def getRuleIndex(self):
            return iimlParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = iimlParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 824634720396) != 0):
                self.state = 32
                self.statement()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(iimlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(iimlParser.VariableDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(iimlParser.AssignmentContext,0)


        def imageStatement(self):
            return self.getTypedRuleContext(iimlParser.ImageStatementContext,0)


        def placeStatement(self):
            return self.getTypedRuleContext(iimlParser.PlaceStatementContext,0)


        def outputStatement(self):
            return self.getTypedRuleContext(iimlParser.OutputStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(iimlParser.ForStatementContext,0)


        def COMMENT(self):
            return self.getToken(iimlParser.COMMENT, 0)

        def getRuleIndex(self):
            return iimlParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = iimlParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.imageStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.placeStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 44
                self.outputStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 45
                self.forStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 46
                self.match(iimlParser.COMMENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(iimlParser.TypeContext,0)


        def ID(self):
            return self.getToken(iimlParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(iimlParser.ExpressionContext,0)


        def getRuleIndex(self):
            return iimlParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = iimlParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.type_()
            self.state = 50
            self.match(iimlParser.ID)
            self.state = 51
            self.match(iimlParser.T__0)
            self.state = 52
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(iimlParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(iimlParser.ExpressionContext,0)


        def getRuleIndex(self):
            return iimlParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = iimlParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(iimlParser.ID)
            self.state = 55
            self.match(iimlParser.T__0)
            self.state = 56
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(iimlParser.ExpressionContext,0)


        def getRuleIndex(self):
            return iimlParser.RULE_outputStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputStatement" ):
                listener.enterOutputStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputStatement" ):
                listener.exitOutputStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutputStatement" ):
                return visitor.visitOutputStatement(self)
            else:
                return visitor.visitChildren(self)




    def outputStatement(self):

        localctx = iimlParser.OutputStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_outputStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(iimlParser.T__1)
            self.state = 59
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImageStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iimlParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(iimlParser.ExpressionContext,i)


        def getRuleIndex(self):
            return iimlParser.RULE_imageStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImageStatement" ):
                listener.enterImageStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImageStatement" ):
                listener.exitImageStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImageStatement" ):
                return visitor.visitImageStatement(self)
            else:
                return visitor.visitChildren(self)




    def imageStatement(self):

        localctx = iimlParser.ImageStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_imageStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(iimlParser.T__2)
            self.state = 62
            self.match(iimlParser.T__3)
            self.state = 63
            self.expression(0)
            self.state = 64
            self.match(iimlParser.T__4)
            self.state = 65
            self.expression(0)
            self.state = 66
            self.match(iimlParser.T__5)
            self.state = 67
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlaceStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shape(self):
            return self.getTypedRuleContext(iimlParser.ShapeContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iimlParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(iimlParser.ExpressionContext,i)


        def shapeSize(self):
            return self.getTypedRuleContext(iimlParser.ShapeSizeContext,0)


        def getRuleIndex(self):
            return iimlParser.RULE_placeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlaceStatement" ):
                listener.enterPlaceStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlaceStatement" ):
                listener.exitPlaceStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlaceStatement" ):
                return visitor.visitPlaceStatement(self)
            else:
                return visitor.visitChildren(self)




    def placeStatement(self):

        localctx = iimlParser.PlaceStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_placeStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(iimlParser.T__6)
            self.state = 70
            self.shape()

            self.state = 71
            self.shapeSize()
            self.state = 72
            self.match(iimlParser.T__7)
            self.state = 73
            self.expression(0)
            self.state = 74
            self.expression(0)
            self.state = 75
            self.match(iimlParser.T__8)
            self.state = 76
            self.match(iimlParser.T__9)
            self.state = 77
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShapeSizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iimlParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(iimlParser.ExpressionContext,i)


        def getRuleIndex(self):
            return iimlParser.RULE_shapeSize

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShapeSize" ):
                listener.enterShapeSize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShapeSize" ):
                listener.exitShapeSize(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShapeSize" ):
                return visitor.visitShapeSize(self)
            else:
                return visitor.visitChildren(self)




    def shapeSize(self):

        localctx = iimlParser.ShapeSizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_shapeSize)
        try:
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(iimlParser.T__10)
                self.state = 80
                self.expression(0)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.match(iimlParser.T__11)
                self.state = 82
                self.expression(0)
                self.state = 83
                self.match(iimlParser.T__12)
                self.state = 84
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forControl(self):
            return self.getTypedRuleContext(iimlParser.ForControlContext,0)


        def statement(self):
            return self.getTypedRuleContext(iimlParser.StatementContext,0)


        def getRuleIndex(self):
            return iimlParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = iimlParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(iimlParser.T__13)
            self.state = 89
            self.forControl()
            self.state = 90
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(iimlParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(iimlParser.ExpressionContext,0)


        def forType(self):
            return self.getTypedRuleContext(iimlParser.ForTypeContext,0)


        def getRuleIndex(self):
            return iimlParser.RULE_forControl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForControl" ):
                listener.enterForControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForControl" ):
                listener.exitForControl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForControl" ):
                return visitor.visitForControl(self)
            else:
                return visitor.visitChildren(self)




    def forControl(self):

        localctx = iimlParser.ForControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forControl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 983048) != 0):
                self.state = 92
                self.forType()


            self.state = 95
            self.match(iimlParser.ID)
            self.state = 96
            self.match(iimlParser.T__14)
            self.state = 97
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(iimlParser.TypeContext,0)


        def getRuleIndex(self):
            return iimlParser.RULE_forType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForType" ):
                listener.enterForType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForType" ):
                listener.exitForType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForType" ):
                return visitor.visitForType(self)
            else:
                return visitor.visitChildren(self)




    def forType(self):

        localctx = iimlParser.ForTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_forType)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(iimlParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.match(iimlParser.T__15)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.match(iimlParser.T__16)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.match(iimlParser.T__17)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 103
                self.match(iimlParser.T__18)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 104
                self.match(iimlParser.T__18)
                self.state = 105
                self.match(iimlParser.T__19)
                self.state = 106
                self.type_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShapeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return iimlParser.RULE_shape

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShape" ):
                listener.enterShape(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShape" ):
                listener.exitShape(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShape" ):
                return visitor.visitShape(self)
            else:
                return visitor.visitChildren(self)




    def shape(self):

        localctx = iimlParser.ShapeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_shape)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 31457280) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return iimlParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class StringConversionExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a iimlParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(iimlParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringConversionExpr" ):
                listener.enterStringConversionExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringConversionExpr" ):
                listener.exitStringConversionExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringConversionExpr" ):
                return visitor.visitStringConversionExpr(self)
            else:
                return visitor.visitChildren(self)


    class IndexExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a iimlParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iimlParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(iimlParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndexExpr" ):
                listener.enterIndexExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndexExpr" ):
                listener.exitIndexExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexExpr" ):
                return visitor.visitIndexExpr(self)
            else:
                return visitor.visitChildren(self)


    class ArithmeticMulDivExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a iimlParser.ExpressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.operator = None # Token
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iimlParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(iimlParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticMulDivExpr" ):
                listener.enterArithmeticMulDivExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticMulDivExpr" ):
                listener.exitArithmeticMulDivExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticMulDivExpr" ):
                return visitor.visitArithmeticMulDivExpr(self)
            else:
                return visitor.visitChildren(self)


    class PrimaryExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a iimlParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primary(self):
            return self.getTypedRuleContext(iimlParser.PrimaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpr" ):
                listener.enterPrimaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpr" ):
                listener.exitPrimaryExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpr" ):
                return visitor.visitPrimaryExpr(self)
            else:
                return visitor.visitChildren(self)


    class ReadExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a iimlParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(iimlParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadExpr" ):
                listener.enterReadExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadExpr" ):
                listener.exitReadExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadExpr" ):
                return visitor.visitReadExpr(self)
            else:
                return visitor.visitChildren(self)


    class ArithmeticAddSubExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a iimlParser.ExpressionContext
            super().__init__(parser)
            self.left = None # ExpressionContext
            self.operator = None # Token
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iimlParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(iimlParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticAddSubExpr" ):
                listener.enterArithmeticAddSubExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticAddSubExpr" ):
                listener.exitArithmeticAddSubExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticAddSubExpr" ):
                return visitor.visitArithmeticAddSubExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a iimlParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(iimlParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpr" ):
                return visitor.visitParenExpr(self)
            else:
                return visitor.visitChildren(self)


    class NumberConversionExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a iimlParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(iimlParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberConversionExpr" ):
                listener.enterNumberConversionExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberConversionExpr" ):
                listener.exitNumberConversionExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberConversionExpr" ):
                return visitor.visitNumberConversionExpr(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = iimlParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32, 35, 36, 37, 38]:
                localctx = iimlParser.PrimaryExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
